--- a/MicroManager/Views/GrowMedia/Create.cshtml
+++ b/MicroManager/Views/GrowMedia/Create.cshtml
@@ -15,8 +15,8 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="SupplierId" class="control-label"></label>
-                <select asp-for="SupplierId" class ="form-control" asp-items="ViewBag.SupplierId"></select>
+                <label asp-for="Supplier_Id" class="control-label"></label>
+                <select asp-for="Supplier_Id" class="form-control" asp-items="ViewBag.SupplierId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Date" class="control-label"></label>
@@ -24,10 +24,10 @@
                 <span asp-validation-for="Date" class="text-danger"></span>
             </div>
             <div class="form-group">
-                 <label asp-for="Type" class="control-label"></label>
+                <label asp-for="Type" class="control-label"></label>
                 @* <span asp-validation-for="Type" class="text-danger"></span>  *@
                 
-                <select class="form-control" asp-items="@Html.GetEnumSelectList<GrowMediaTypesEnum>()">
+                <select asp-for="Type" class="form-control" asp-items="@ViewBag.MediaType">
                     <option value="">-- Select Grow Media Type --</option>
                 </select>
             </div>
@@ -59,7 +59,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index"class="btn btn-primary">Back to List</a>
 </div>
 
 @section Scripts {
