--- a/MicroManager/Views/GrowMedia/Delete.cshtml
+++ b/MicroManager/Views/GrowMedia/Delete.cshtml
@@ -52,7 +52,8 @@
             @Html.DisplayNameFor(model => model.Supplier)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Supplier.CompanyName)
+            @* @Html.DisplayFor(model => model.Supplier.CompanyName) *@
+
         </dd>
     </dl>
     
