--- a/MicroManager/Views/GrowMedia/Index.cshtml
+++ b/MicroManager/Views/GrowMedia/Index.cshtml
@@ -51,13 +51,8 @@
                     @Html.DisplayFor(modelItem => item.Date)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.GrowMediaTypesEnums)
-                   @* @Html.DropDownList("Type", new List<SelectListItem> {
-                       new SelectListItem{Text="Potting Soil", Value="1" },
-                       new SelectListItem{Text="Coca", Value="2" },
-                       new SelectListItem{Text="Sand", Value="3" },
-                        new SelectListItem{Text="Paper Towel", Value="4" }
-                   }, "Select Type" ) *@
+                    @Html.DisplayFor(modelItem => item.Type)
+                  
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Volume)
