--- a/MicroManager/Views/Employee/Delete.cshtml
+++ b/MicroManager/Views/Employee/Delete.cshtml
@@ -31,6 +31,12 @@
             @Html.DisplayFor(model => model.LastName)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Address)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Address)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.City)
         </dt>
         <dd class = "col-sm-10">
@@ -70,7 +76,7 @@
             @Html.DisplayNameFor(model => model.Roles)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Roles.RoleId)
+            @Html.DisplayFor(model => model.Roles.RoleTitle)
         </dd>
     </dl>
     
