--- a/MicroManager/Views/Employee/Details.cshtml
+++ b/MicroManager/Views/Employee/Details.cshtml
@@ -30,6 +30,12 @@
             @Html.DisplayFor(model => model.LastName)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Address)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Address)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.City)
         </dt>
         <dd class = "col-sm-10">
@@ -69,7 +75,7 @@
             @Html.DisplayNameFor(model => model.Roles)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Roles.RoleId)
+            @Html.DisplayFor(model => model.Roles.RoleTitle)
         </dd>
     </dl>
 </div>
