--- a/MicroManager/Views/Employee/Index.cshtml
+++ b/MicroManager/Views/Employee/Index.cshtml
@@ -5,10 +5,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Employees</h1>
+<h1>List of Employees</h1>
 
 <p>
-    <a asp-action="Create" class="btn btn-primary">Create New Employee</a>
+    <a asp-action="Create" class="btn btn-outline-primary">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -21,6 +21,9 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.LastName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Address)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.City)
@@ -59,6 +62,9 @@
                 @Html.DisplayFor(modelItem => item.LastName)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.Address)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.City)
             </td>
             <td>
@@ -77,7 +83,7 @@
                 @Html.DisplayFor(modelItem => item.EMail)
             </td>
             <td>
-                    @Html.DisplayFor(modelItem => item.Roles.RoleTitle)
+                @Html.DisplayFor(modelItem => item.Roles.RoleTitle)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.EmployeeId">Edit</a> |
